[gd_scene load_steps=17 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://assets/maujoe.camera_control/scripts/camera_control.gd" type="Script" id=2]
[ext_resource path="res://gui.gd" type="Script" id=3]
[ext_resource path="res://addons/zylann.hterrain_demo/textures/table_mountain_2_4k.hdr" type="Texture" id=4]
[ext_resource path="res://map.tscn" type="PackedScene" id=5]
[ext_resource path="res://girassol_font.tres" type="DynamicFont" id=6]
[ext_resource path="res://font_theme.tres" type="Theme" id=7]
[ext_resource path="res://job_markers.gd" type="Script" id=8]
[ext_resource path="res://pawn_models.gd" type="Script" id=9]
[ext_resource path="res://timers.gd" type="Script" id=10]

[sub_resource type="PanoramaSky" id=1]
panorama = ExtResource( 4 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_energy = 0.8
ambient_light_sky_contribution = 0.52

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_do_not_receive_shadows = true
albedo_color = Color( 1, 1, 1, 0.176471 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 3 )
flip_faces = true
size = Vector3( 1, 2, 1 )

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_do_not_receive_shadows = true
albedo_color = Color( 0.835294, 0.823529, 0.0784314, 0.309804 )

[sub_resource type="CubeMesh" id=6]
material = SubResource( 5 )
flip_faces = true
size = Vector3( 1, 2, 1 )

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="Timers" type="Spatial" parent="."]
script = ExtResource( 10 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.648372, 1.9323e-08, -0.761323, 2.98023e-08, 1, 0, 0.761323, -2.26892e-08, -0.648372, 0, 0, 0 )
light_energy = 0.3

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 44.1072, 48.6903, 38.482 )
fov = 60.0
far = 371.5
script = ExtResource( 2 )
mouse_mode = 0
freelook = false
pitch_limit = 24
distance = 20.0
average_max_speed = Vector3( 40, 40, 40 )
local = false

[node name="Pawns" type="Spatial" parent="."]
script = ExtResource( 9 )

[node name="Jobs" type="Spatial" parent="."]

[node name="Map" parent="." instance=ExtResource( 5 )]

[node name="GUI" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Menus" type="CanvasLayer" parent="GUI"]

[node name="Right" type="Control" parent="GUI/Menus"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.827
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.151978
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="GUI/Menus/Right"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 45.0
margin_right = 0.0319824
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tools" type="VBoxContainer" parent="GUI/Menus/Right/VSplitContainer"]
margin_right = 204.0
margin_bottom = 119.0

[node name="ToolsLabel" type="Label" parent="GUI/Menus/Right/VSplitContainer/Tools"]
margin_right = 204.0
margin_bottom = 21.0
theme = ExtResource( 7 )
text = "TOOLS"

[node name="HSeparator2" type="HSeparator" parent="GUI/Menus/Right/VSplitContainer/Tools"]
margin_top = 25.0
margin_right = 204.0
margin_bottom = 29.0

[node name="ToolsGrid" type="GridContainer" parent="GUI/Menus/Right/VSplitContainer/Tools"]
margin_top = 33.0
margin_right = 204.0
margin_bottom = 119.0
columns = 3

[node name="SaveButton" type="Button" parent="GUI/Menus/Right/VSplitContainer/Tools/ToolsGrid"]
margin_right = 50.0
margin_bottom = 26.0
theme = ExtResource( 7 )
custom_fonts/font = ExtResource( 6 )
text = "Save"

[node name="LoadButton" type="Button" parent="GUI/Menus/Right/VSplitContainer/Tools/ToolsGrid"]
margin_left = 54.0
margin_right = 122.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 6 )
text = "Load"

[node name="Button3" type="Button" parent="GUI/Menus/Right/VSplitContainer/Tools/ToolsGrid"]
margin_left = 126.0
margin_right = 183.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 6 )
text = "Forage"

[node name="Button4" type="MenuButton" parent="GUI/Menus/Right/VSplitContainer/Tools/ToolsGrid"]
margin_top = 30.0
margin_right = 50.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 6 )
text = "Build"

[node name="PopupMenu2" type="PopupMenu" parent="GUI/Menus/Right/VSplitContainer/Tools/ToolsGrid/Button4"]
margin_right = 20.0
margin_bottom = 20.0

[node name="Button5" type="Button" parent="GUI/Menus/Right/VSplitContainer/Tools/ToolsGrid"]
margin_left = 54.0
margin_top = 30.0
margin_right = 122.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 6 )
text = "Weave"

[node name="Button6" type="Button" parent="GUI/Menus/Right/VSplitContainer/Tools/ToolsGrid"]
margin_left = 126.0
margin_top = 30.0
margin_right = 183.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 6 )
text = "Fell"

[node name="Button7" type="Button" parent="GUI/Menus/Right/VSplitContainer/Tools/ToolsGrid"]
margin_top = 60.0
margin_right = 50.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 6 )
text = "Forge"

[node name="Button8" type="Button" parent="GUI/Menus/Right/VSplitContainer/Tools/ToolsGrid"]
margin_left = 54.0
margin_top = 60.0
margin_right = 122.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 6 )
text = "Enchant"

[node name="Button9" type="Button" parent="GUI/Menus/Right/VSplitContainer/Tools/ToolsGrid"]
visible = false
margin_left = 97.0
margin_top = 48.0
margin_right = 151.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 6 )
text = "Dig"

[node name="Jobs" type="VBoxContainer" parent="GUI/Menus/Right/VSplitContainer"]
margin_top = 131.0
margin_right = 204.0
margin_bottom = 800.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JobsLabel" type="Label" parent="GUI/Menus/Right/VSplitContainer/Jobs"]
margin_right = 204.0
margin_bottom = 21.0
theme = ExtResource( 7 )
text = "JOBS"

[node name="JobsList" type="VBoxContainer" parent="GUI/Menus/Right/VSplitContainer/Jobs"]
margin_top = 25.0
margin_right = 204.0
margin_bottom = 29.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="GUI/Menus/Right/VSplitContainer/Jobs/JobsList"]
margin_right = 204.0
margin_bottom = 4.0

[node name="Left" type="Control" parent="GUI/Menus"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -195.0
margin_right = 171.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="GUI/Menus/Left"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Menus/Left/VSplitContainer"]
margin_right = 171.0
margin_bottom = 71.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PawnHoverLabel" type="Label" parent="GUI/Menus/Left/VSplitContainer/VBoxContainer"]
margin_right = 171.0
margin_bottom = 21.0
theme = ExtResource( 7 )
text = "Pawn:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FeatureHoverLabel" type="Label" parent="GUI/Menus/Left/VSplitContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 171.0
margin_bottom = 46.0
theme = ExtResource( 7 )
text = "Feature:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TerrainHoverLabel" type="Label" parent="GUI/Menus/Left/VSplitContainer/VBoxContainer"]
margin_top = 50.0
margin_right = 171.0
margin_bottom = 71.0
theme = ExtResource( 7 )
text = "Terrain:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GUI/Menus/Left/VSplitContainer/VBoxContainer/TerrainHoverLabel"]
margin_left = 60.4313
margin_top = 1.0
margin_right = 100.431
margin_bottom = 12.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="GUI/Menus/Left/VSplitContainer"]
margin_top = 83.0
margin_right = 171.0
margin_bottom = 183.0
rect_min_size = Vector2( 0, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="GUI/Menus/Left/VSplitContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetFocus" type="Label" parent="GUI/Menus/Left/VSplitContainer/Panel/MarginContainer"]
margin_right = 151.0
margin_bottom = 100.0
rect_min_size = Vector2( 8, 100 )
theme = ExtResource( 7 )
text = "This Person
(Focused Entity)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoverIndicator" type="Spatial" parent="GUI"]

[node name="TransparentWhiteCube" type="MeshInstance" parent="GUI/HoverIndicator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
cast_shadow = 0
mesh = SubResource( 4 )
material/0 = null

[node name="SelectIndicator" type="Spatial" parent="GUI"]

[node name="TransparentYellowCube" type="MeshInstance" parent="GUI/SelectIndicator"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
cast_shadow = 0
mesh = SubResource( 6 )
material/0 = null

[node name="JobMarkers" type="Spatial" parent="GUI"]
script = ExtResource( 8 )
